improvement for SwaggerUI