@@ -2,9 +2,11 @@ package com.example.todoapp.security;
 
 import com.example.todoapp.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -20,7 +22,12 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // ロール機能は後で拡張可
+        String role = user.getRole();
+        if (role == null || role.isBlank()) {
+            return Collections.emptyList();
+        }
+        String normalizedRole = role.startsWith("ROLE_") ? role : "ROLE_" + role;
+        return List.of(new SimpleGrantedAuthority(normalizedRole));
     }
 
     @Override
